--- a/src/public/1-gallery.html
+++ b/src/public/1-gallery.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <p><a href="./index.html">Go back</a></p>
+    <p><a href="../public/index.html">Go back</a></p>
 
     <script src="../js/1-gallery.js" type="module"></script>
   </body>
