--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <p><a href="../public/index.html">Go back</a></p>
-
-    <script src="../js/1-gallery.js" type="module"></script>
+    <p><a href="./index.html">Go back</a></p>
+    <ul class="gallery"></ul>
+    <script src="./js/1-gallery.js" type="module"></script>
   </body>
 </html>
